--- a/html&&css/css-slider-advanced.html
+++ b/html&&css/css-slider-advanced.html
@@ -13,38 +13,56 @@ Released under the MIT license: http://jsbin.mit-license.org
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
-  <style id="jsbin-css">
+  <title>高级Slider</title>
+  <style>
+    html,
+    body {
+      margin: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    body {
+      background: #fff url(https://tympanus.net/Tutorials/CSS3SlidingImagePanels/images/bg.jpg) repeat top left;
+      position: relative;
+    }
 
     main {
-      margin-left: 50%;
-      transform: translate(-50%);
+      width: 600px;
+      height: 400px;
       position: relative;
-    }
-    section {
-      position: absolute;
-      margin: auto;
-      left: 0;
-      right: 0;
+      margin: 0 auto;
+      border: 20px solid #fff;
+      box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
     }
 
-    div {
+    section {
+      display: flow-root;
+      position: relative;
+    }
+
+    div[class^=d] {
       position: relative;
       float: left;
-      width: 100px;
+      width: 150px;
       height: 400px;
-      margin-left: 2px;
+      /* margin-left: 1px; */
       overflow: hidden;
     }
 
-    span {
-      width: 100px;
+    span[class^=s] {
+      width: 150px;
       height: 400px;
       display: block;
       position: absolute;
       right: 100%;
-      transition: .6s linear;
-      animation: leave .6s linear;
+      animation: leave .5s ease-in-out;  
+      transition: .5s ease-in-out
+      /* 离开时 需要向右的动画 在没有被checked时 恢复动画属性 执行动画 在checked时 把动画取消掉  
+         被选中的span right设置为 0 , 显示出来,该过程设置transition
+         在页面刷新的时候,会自动执行没有checked的span的animation动画?? 怎么办??? 
+         !!! 播放无法阻止,但是可以把他们给遮住! 把选中的span的z-index设置高一点
+      */
     }
 
     @keyframes leave {
@@ -58,19 +76,19 @@ Released under the MIT license: http://jsbin.mit-license.org
     }
 
     .s1 {
-      background-image: url(https://img0.pclady.com.cn/pclady/pet/choice/cat/1701/6.jpg);
+      background-image: url(https://tympanus.net/Tutorials/CSS3SlidingImagePanels/images/1.jpg);
     }
 
     .s2 {
-      background-image: url(http://5b0988e595225.cdn.sohucs.com/images/20190419/9b23c71a7cf74e27be1664a75714f068.jpeg);
+      background-image: url(https://tympanus.net/Tutorials/CSS3SlidingImagePanels/images/2.jpg);
     }
 
     .s3 {
-      background-image: url(http://m.360buyimg.com/pop/jfs/t23800/110/1785884209/43174/8227536e/5b696c87N0995f58f.jpg);
+      background-image: url(https://tympanus.net/Tutorials/CSS3SlidingImagePanels/images/3.jpg);
     }
 
     .s4 {
-      background-image: url(http://pic.qqtn.com/up/2017-12/2017122711382732143.jpg);
+      background-image: url(https://tympanus.net/Tutorials/CSS3SlidingImagePanels/images/4.jpg);
     }
 
     .d1 .s1,
@@ -84,21 +102,21 @@ Released under the MIT license: http://jsbin.mit-license.org
     .d2 .s2,
     .d2 .s3,
     .d2 .s4 {
-      background-position: -100px 0;
+      background-position: -150px 0;
     }
 
     .d3 .s1,
     .d3 .s2,
     .d3 .s3,
     .d3 .s4 {
-      background-position: -200px 0;
+      background-position: -300px 0;
     }
 
     .d4 .s1,
     .d4 .s2,
     .d4 .s3,
     .d4 .s4 {
-      background-position: -300px 0;
+      background-position: -450px 0;
     }
 
     input:nth-child(1):checked~div .s1 {
@@ -126,23 +144,39 @@ Released under the MIT license: http://jsbin.mit-license.org
     }
 
     input:nth-child(1):checked~.label label:nth-child(1) {
-      border-color: pink;
-      border-width: 15px;
+      color: #68abc2;
     }
 
     input:nth-child(2):checked~.label label:nth-child(2) {
-      border-color: pink;
-      border-width: 15px;
+      color: #68abc2;
     }
 
     input:nth-child(3):checked~.label label:nth-child(3) {
-      border-color: pink;
-      border-width: 15px;
+      color: #68abc2;
     }
 
     input:nth-child(4):checked~.label label:nth-child(4) {
-      border-color: pink;
-      border-width: 15px;
+      color: #68abc2;
+    }
+
+    input:nth-child(1):checked~.label label:nth-child(1)::before {
+      background-color: #fff;
+      box-shadow: 0px 0px 0px 4px rgba(104, 171, 194, 0.6);
+    }
+
+    input:nth-child(2):checked~.label label:nth-child(2)::before {
+      background-color: #fff;
+      box-shadow: 0px 0px 0px 4px rgba(104, 171, 194, 0.6);
+    }
+
+    input:nth-child(3):checked~.label label:nth-child(3)::before {
+      background-color: #fff;
+      box-shadow: 0px 0px 0px 4px rgba(104, 171, 194, 0.6);
+    }
+
+    input:nth-child(4):checked~.label label:nth-child(4)::before {
+      background-color: #fff;
+      box-shadow: 0px 0px 0px 4px rgba(104, 171, 194, 0.6);
     }
 
     input {
@@ -151,51 +185,119 @@ Released under the MIT license: http://jsbin.mit-license.org
 
     .label {
       position: absolute;
-      top: 360px;
+      top: 0;
+      left: 0;
       width: auto;
       height: auto;
-      left: 130px;
       z-index: 100;
+      overflow: visible;
 
     }
 
     label {
-      width: 30px;
+      font-style: italic;
+      font-family: "Cambria";
+      width: 150px;
       height: 30px;
-      border-radius: 50%;
-      border: 5px solid aqua;
-      background-color: rgba(0, 0, 0, .1);
-      float: left;
-      margin-right: 10px;
       cursor: pointer;
-      transition: .2s;
-      box-sizing: border-box;
+      color: #fff;
+      line-height: 32px;
+      font-size: 24px;
+      float: left;
+      z-index: 1000;
+      text-align: center;
+      margin-top: 350px;
+      position: relative;
+      bottom: 0;
     }
 
-    label:hover {
-      border-width: 15px;
-      border-color: pink;
+    label::before {
+      content: '';
+      width: 34px;
+      height: 34px;
+      background: rgba(130, 195, 217, 0.9);
+      position: absolute;
+      left: 50%;
+      margin-left: -17px;
+      border-radius: 50%;
+      box-shadow: 0px 0px 0px 4px rgba(255, 255, 255, 0.3);
+      z-index: -1;
+    }
+
+    label::after {
+      width: 1px;
+      height: 400px;
+      content: '';
+      background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+      position: absolute;
+      bottom: -50px;
+      right: 0px;
+    }
+
+    .titles h3 span:nth-child(1) {
+      font-family: 'BebasNeueRegular';
+      font-size: 70px;
+      display: block;
+      letter-spacing: 7px;
+    }
+
+    .titles h3 span:nth-child(2) {
+      font-family: "Cambria";
+      letter-spacing: 0px;
+      display: block;
+      background: rgba(104, 171, 194, 0.9);
+      font-size: 14px;
+      padding: 10px;
+      font-style: italic;
+    }
+
+    .titles h3 {
+      font-family: "Cambria";
+      position: absolute;
+      width: 100%;
+      text-align: center;
+      top: 40%;
+      z-index: 10000;
+      opacity: 0;
+      color: #fff;
+      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+      transition: opacity 0.8s ease-in-out;
+    }
+
+
+    input:nth-child(1):checked~.titles h3:nth-child(1) {
+      opacity: 1;
+    }
+
+    input:nth-child(2):checked~.titles h3:nth-child(2) {
+      opacity: 1;
+    }
+
+    input:nth-child(3):checked~.titles h3:nth-child(3) {
+      opacity: 1;
+    }
+
+    input:nth-child(4):checked~.titles h3:nth-child(4) {
+      opacity: 1;
+    }
+    ol {
+      margin-top: 50px;
     }
   </style>
 </head>
 
 <body>
   <main>
-    <h1>slider 高级应用</h1>
-    <p>
-      1.每一个span图片切换通过动画总是实现水平向右滚动 <br>
-      2.页面刷新出现默认动画
-    </p>
     <section>
       <input checked type="radio" name="cat" id="i1">
       <input type="radio" name="cat" id="i2">
       <input type="radio" name="cat" id="i3">
       <input type="radio" name="cat" id="i4">
       <div class="label">
-        <label for="i1"></label>
-        <label for="i2"></label>
-        <label for="i3"></label>
-        <label for="i4"></label>
+        <label for="i1">1</label>
+        <label for="i2">2</label>
+        <label for="i3">3</label>
+        <label for="i4">4</label>
       </div>
       <div class="d1">
         <span class="s1"></span>
@@ -221,8 +323,17 @@ Released under the MIT license: http://jsbin.mit-license.org
         <span class="s3"></span>
         <span class="s4"></span>
       </div>
+      <div class="titles">
+        <h3><span>title1</span><span>subtitle1</span></h3>
+        <h3><span>title2</span><span>subtitle2</span></h3>
+        <h3><span>title3</span><span>subtitle3</span></h3>
+        <h3><span>title4</span><span>subtitle4</span></h3>
+      </div>
     </section>
-
+    <ol>
+      <li>利用动画实现切换图片时，总是同一个方向进出。</li>
+      <li>页面刷新不会执行动画</li>
+    </ol>
   </main>
 </body>
 
